--- a/theme/templates/nav-bar.html
+++ b/theme/templates/nav-bar.html
@@ -4,7 +4,7 @@
 
     <div class="flex items-center px-4">
       <!-- Logo (left) -->
-      <img class="w-16" src="{% static 'assets/icons/Arab_Tunisian_Bank_logo.gif' %}" alt="ATB Logo">
+      <img class="w-16" src="{% static 'assets/icons/Atb39logo.jpg' %}" alt="ATB Logo">
 
       <!-- Growing button (right side, large click area) -->
       <button onclick="myFunction()" 
@@ -36,7 +36,7 @@
   <ul class="flex justify-between items-center px-4 md:px-12 lg:px-32 space-x-6 font-primary text-[16px] sm:text-[16px] md:text-[18px] font-semibold">
     <!-- Left side -->
     <div class="flex items-center text-atb-g-600 gap-8">
-      <img class="w-16" src="{% static 'assets/icons/Arab_Tunisian_Bank_logo.gif' %}" alt="ATB Logo">
+      <img class="w-16" src="{% static 'assets/icons/Atb39logo.jpg' %}" alt="ATB Logo">
 
       {% if request.user.is_authenticated and not request.user.is_superuser %}
         {% include 'nav-items/user.html' %}
