--- a/theme/templates/nav-items/user.html
+++ b/theme/templates/nav-items/user.html
@@ -5,10 +5,5 @@
     <a href="{% url 'accounts:profile' %}">Profile</a>
 </li>
 <li class="hover:text-[#a60000]  pr-6">
-    <a href="{% url 'notifications:not-list' %}">Notifications</a>
-</li>
-<li class="hover:text-[#a60000]  pr-6">
-    <button>
-        test
-    </button>
+    <a href="">Notifications</a>
 </li>
